# hi_per

./: .gitignore  README.md  pyproject.toml
Lab04/: find_max  find_max.cpp  find_max_threads  find_max_threads.cpp  helgrind.out  plot.py  start_triad_bench.sh  triad_bench  triad_bench.cpp  triad_bench_2.cpp
Lab04/stats/: stats0.csv  stats1.csv  stats10.csv  stats11.csv  stats2.csv  stats3.csv  stats4.csv  stats5.csv  stats6.csv  stats7.csv  stats8.csv  stats9.csv
lab02/: calc_lookup_table.py  main.py  optimized.cpp  outcomes-100-1000000.csv  outcomes2.csv  outcomes3.csv  outcomes5.csv  output.txt  pyproject.toml  triad_bench.cpp
lab02/fib/: CMakeLists.txt
lab02/fib/include/: matrix.h
lab02/fib/src/: compute.cpp  compute2.cpp  computeNew.cpp  main.cpp  test_stuff.cc
lab03/: compute2.cpp  jacobi_bench1.cpp  jacobi_bench2.cpp  jacobi_bench2_changed_flops.cpp  results.json
lab03/plot/: main.py  pyproject.toml  results.json  results_flops.json
lab05/: foo  fooBar.cpp  matrix  matrixVectorProduct copy.cpp  matrixVectorProductDistributedIndices  matrixVectorProductDistributedIndices.cpp  matrixVectorProductRowCalculation.cpp  plot_mVPDI.py  pyproject.toml  raceCondition.cpp  results_mVPDI.json  results_mVPRC.json  threadBehavior.py
lab05/svals/: stats12_0.csv  stats12_1.csv  stats12_10.csv  stats12_100.csv  stats12_101.csv  stats12_102.csv  stats12_103.csv  stats12_104.csv  stats12_105.csv  (+2713 more)
lab06/: MonteCarloPiThreads.cpp  MonteCarloPiThreadsDyn.cpp  \  benchmark.csv  benchmark_dyn.csv  benchmark_gui.csv  jacobi_benchmark.cpp  multi_monte.cpp  plot_jacobi.py  plot_monte.py  plot_scaling.py
lab12/: sieve_e.cpp
(+138 files in other folders)
